--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <tbody>
             <tr>
                 <th scope="row">Informatica</th>
-                <td>Actualmente realizando curso de programador de aplicaciones web donde desarrollar y manejar programas como HTML,CSS,JavaScript,Bootstrap,etc. Amplia experiencia en el uso de Programas Office, SAP, FIORI y de equipos digitales tipo PDA.</td>
+                <td>Actualmente realizando curso de programador de aplicaciones web donde desarrollar y manejar programas como HTML5,CSS,JavaScript,Bootstrap,PHP,MySQL,GIT,WordPress,GitHub,etc. Amplia experiencia en el uso de Programas Office, SAP, FIORI y de equipos digitales tipo PDA.</td>
              
               </tr>
           <tr>
